# template-style-transfer

./: .gitignore  pyproject.toml
app/: main.py
package/: pyproject.toml
package/app/: main.py
package/src/ai_template_style_transfer/: __init__.py  jira.py  openai.py  prompt_templates.py
package/tests/: test__transfer_style.py
src/ai_template_style_transfer/: transfer.py
