[tool.poetry]
name = "ai-template-style-transfer"
version = "0.0.0"
description = ""
authors = ["Chris Mamon <chrisam1993@live.com>"]
readme = "README.md"
packages = [{include = "ai_template_style_transfer", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
triple-quote-clean = "^1.1.0"
langchain = {extras = ["llms"], version = "^0.0.233"}
streamlit = "^1.24.1"

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.4"
pytest = "^7.4.0"
isort = "^5.12.0"
black = "^23.7.0"

[tool.poetry-dynamic-versioning]
enable = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning.substitution]
folders = [
  { path = "src" }
]
